Show error message if backup file saving fails

Before this commit, Krita wouldn't show an error message
if the backup file saving procedure failed.
This commit ensures the error message will be shown.

BUG:465954

Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1743>